--- a/fundamentals.html
+++ b/fundamentals.html
@@ -34,7 +34,9 @@
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 70vh;
-    } .color-2{
+    } 
+    
+    .color-2{
     text-align:justify !important;
     font-size: 15px;
   color:#8f8f8f !important;
