--- a/assessment.html
+++ b/assessment.html
@@ -22,30 +22,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <title>Assessment & Methodology – Cybron Security</title>
- <style>
-    .aboutback{
-        background-image: url("assets/evulation_2.png");
-        transform: scale(0.99.9) !important;
-  transition: 0.9s ease-in-out !important;
-  background-position: center !important;
-  object-fit: cover !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  background-attachment: fixed !important;
-  height: 80vh !important;
-    }
-    .card-text {
 
-        text-transform: lowercase;
-        color: rgb(177, 177, 177);
-    }
-   .pic{
-    background-image: url(assets/name.png);
-    height: 60vh;
-    margin: 20px 0px;
-    border-radius: 20px;
-   }
- </style>
 </head>
 
 <body>
@@ -362,6 +339,12 @@ id="carouselExampleFade"
 class="aboutback d-flex justify-content-center align-items-center"
 data-bs-ride="carousel"
 >
+<img
+src="assets/assesment-bg.png"
+alt="About Cybron Background"
+class="position-absolute w-100 h-100 aboutback"
+
+/>
 <div class="text-center d-flex flex-column justify-content-center align-items-center">
   <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Assessment & Methodology</h1>
   <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12"
@@ -393,14 +376,9 @@ You are the good assessors of your goodself</h5>
       </div>
       </div>
 
-      <div class="container-fluid">
-        <div class="col-11 mx-auto pic d-flex flex-row justify-content-center align-items-center position-relative">
-          <!-- <button class="mt-3 btn3 col-lg-2 p-2 d-flex flex-row align-items-center justify-content-center">
-SEE MORE
-            <i class="fa-solid fa-arrow-right icon-hover"></i>
-          </button> -->
+      <div class="container-fluid mb-5 d-flex justify-content-center" >
+        <img src="assets/assessment_picture.png" class="rounded-3 img-fluid col-11 mx-auto" alt="" srcset="">
 
-        </div>
       </div>
     <!-- EXPERICNE SECTION END -->
 
