--- a/evolution.html
+++ b/evolution.html
@@ -23,17 +23,7 @@
 
  <title>Evolution of Cybron – Cybron Security</title>
  <style>
-    .aboutback{
-        background-image: url("assets/evulation_4.png");
-        transform: scale(0.99.9) !important;
-  transition: 6.9s ease-in-out !important;
-  background-position: center !important;
-  object-fit: cover !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  background-attachment: fixed !important;
-  height: 70vh;
-    }
+
 @media  (max-width:992px){
     .timeline::before {
       content: '';
@@ -386,6 +376,12 @@ id="carouselExampleFade"
 class="aboutback d-flex justify-content-center align-items-center"
 data-bs-ride="carousel"
 >
+<img
+src="assets/evulation_4.png"
+alt="About Cybron Background"
+class="position-absolute w-100 h-100 aboutback"
+
+/>
 <div class="text-center d-flex flex-column justify-content-center align-items-center">
   <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Evolution of Cybron</h1>
   <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12"
