--- a/framework.html
+++ b/framework.html
@@ -22,34 +22,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <title>Cybron Framework– Cybron Security</title>
- <style>
-    .aboutback{
-        background-image: url("assets/ff.png");
-        transform: scale(0.99.9) !important;
-  transition: 6.9s ease-in-out !important;
-  background-position: center !important;
-  object-fit: cover !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  background-attachment: fixed !important;
-  height: 70vh;
-    }
-    .fr{
-        background-image: url("assets/framework.jpg");
-        height: 87vh;
-        width: 100%;
-        background-size: cover;
-        object-fit: cover;
-position: relative;
-transform: scale(1);
-background-attachment: fixed;
-transition: 0.8s ease-in-out !important;
-    }
-    .fr:hover{
-        transform: scale(1.02);
-    }
 
- </style>
 </head>
 
 <body>
@@ -366,6 +339,12 @@ id="carouselExampleFade"
 class="aboutback d-flex justify-content-center align-items-center"
 data-bs-ride="carousel"
 >
+<img
+src="assets/framework-bg.png"
+alt="About Cybron Background"
+class="position-absolute w-100 h-100 aboutback"
+
+/>
 <div class="text-center d-flex flex-column justify-content-center align-items-center">
   <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Cybron Framework</h1>
   <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12"
@@ -379,9 +358,8 @@ Home / Cybron Framework </h5>
 
 <!-- FRAMEWORK -->
 <div class="container my-5 ">
-<div class="col-8 mx-auto fr">
+  <img src="assets/framework.jpg" alt="" class="img-fluid">
 
-</div>
 </div>
 <!-- FRAMEWORK -->
 
