--- a/ProfessionalMemberships.html
+++ b/ProfessionalMemberships.html
@@ -22,31 +22,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <title>Cybron Professional Membership – Cybron Security</title>
- <style>
-    .aboutback{
-        background-image:  url(assets/evulation_3.png);
-        transform: scale(1) !important;
-  transition: 0.9s ease-in-out !important;
-  background-position: center !important;
-  object-fit: cover !important;
-  box-sizing: border-box !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  background-attachment: fixed !important;
-  height: 70vh;
-    }
- 
-    .card-text {
-        text-transform: lowercase;
-        color: rgb(177, 177, 177);
-    }
-   .cardofmem{
-    height: 330px;
-    background-size: cover;
-    background-position: center;
-    background-image: url(assets/pro.jpg);
-   }
- </style>
+
 </head>
 
 <body>
@@ -363,6 +339,12 @@ id="carouselExampleFade"
 class="aboutback d-flex justify-content-center align-items-center"
 data-bs-ride="carousel"
 >
+<img
+src="assets/scout_membership.png"
+alt="About Cybron Background"
+class="position-absolute w-100 h-100 aboutback"
+
+/>
 <div class="text-center d-flex flex-column justify-content-center align-items-center">
   <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Home /Cybron Professional Membership</h1>
   <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12"
@@ -383,7 +365,9 @@ data-bs-ride="carousel"
         </div>
         </div>
 
-        <div class="col-lg-5  mx-auto cardofmem"></div>
+        <div class="col-lg-5  mx-auto ">
+          <img src="assets/scout_pro_card.jpg" class="img-fluid" alt="">
+        </div>
 
 
 
