Your commit message here

--- a/Partners.html
+++ b/Partners.html
@@ -22,26 +22,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
  <title>Cybron-Partners– Cybron Security</title>
- <style>
-    .aboutback{
-        background-image:  url("assets/evulation_3.png");
-        transform: scale(1) !important;
-  transition: 0.9s ease-in-out !important;
-  background-position: center !important;
-  object-fit: cover !important;
-  box-sizing: border-box !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  background-attachment: fixed !important;
-  height: 70vh;
-    }
- 
-    .card-text {
-        text-transform: lowercase;
-        color: rgb(177, 177, 177);
-    }
-   
- </style>
+
 </head>
 
 <body>
@@ -356,6 +337,12 @@ id="carouselExampleFade"
 class="aboutback d-flex justify-content-center align-items-center"
 data-bs-ride="carousel"
 >
+<img
+src="assets/evulation_1.png"
+alt="About Cybron Background"
+class="position-absolute w-100 h-100 aboutback"
+
+/>
 <div class="text-center d-flex flex-column justify-content-center align-items-center">
   <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Cybron-Partners</h1>
   <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12"
