--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-<style>
-  .back1{
-    background-image: url("assets/banner_6.png") !important;
-  }
-</style>
+
  <title>Contact– Cybron Security</title>
 </head>
 
@@ -337,6 +333,12 @@
   class="back1 d-flex justify-content-center align-items-center"
   data-bs-ride="carousel"
 >
+<img
+src="assets/banner_6.png"
+alt="About Cybron Background"
+class="position-absolute w-100 h-100 aboutback"
+
+/>
 <div class="text-center d-flex flex-column justify-content-center align-items-center">
     <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Contact us</h1>
     <h3 class=" text-center text-col fw-bold mt-2">Home / Contact us</h3>
@@ -444,50 +446,50 @@
 
 
  <!-- FOOTER -->
-<footer>
-  <footer class="bg-light py-5">
+  <footer class=" pt-5">
     <div class="container-fluid px-4">
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
-          <img src="assets/logo.png" alt="Cybron Logo" class="mb-3 col-3 m-0 p-0">
-          <p>404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
-          <p><a href="mailto:cybron@cybroninternational.com" class="text-dark">cybron@cybroninternational.com</a></p>
+          <img src="assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
+          <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom
+          </p>
+          <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
-  
+
         <!-- Cybron Services -->
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Cybron Services</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">About Cybron</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Memberships</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Certifications</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Partners</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Trainers</a></li>
+            <li><a href="about.html" class="text-dark text-decoration-none">About Cybron</a></li>
+            <li><a href="ScoutMemberships.html" class="text-dark text-decoration-none">Memberships</a></li>
+            <li><a href="certifications.html" class="text-dark text-decoration-none">Certifications</a></li>
+            <li><a href="Partners.html" class="text-dark text-decoration-none">Partners</a></li>
+            <li><a href="Trainers.html" class="text-dark text-decoration-none">Trainers</a></li>
           </ul>
         </div>
-  
+
         <!-- Quick Links -->
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">Enroll Your School</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Self Enrollment Process</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Terms of Payment</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Privacy Policy</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Where to Find Us</a></li>
+            <li><a href="BecomePartner.html" class="text-dark text-decoration-none">Enroll Your School</a></li>
+            <li><a href="BecomeTrainer.html" class="text-dark text-decoration-none">Self Enrollment Process</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Terms of Payment</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Privacy Policy</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Where to Find Us</a></li>
           </ul>
         </div>
-  
+
         <!-- Support -->
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Support</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">Email Us</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Pricing and Plans</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Contact Us</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Cookies Policy</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Help & FAQ</a></li>
+            <li><a href="mailto:cybron@cybroninternational.com" class="text-dark text-decoration-none">Email Us</a></li>
+            <li><a href="about.html" class="text-dark text-decoration-none">Pricing and Plans</a></li>
+            <li><a href="contact.html" class="text-dark text-decoration-none">Contact Us</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Cookies Policy</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Help & FAQ</a></li>
           </ul>
           <!-- <div class="d-flex gap-2 mt-3">
             <a href="#"><img src="path-to-google-play.png" alt="Google Play" class="img-fluid" style="max-width: 120px;"></a>
@@ -495,21 +497,13 @@
           </div> -->
         </div>
       </div>
-  
+
       <!-- Footer Bottom -->
-      <div class="text-center mt-4 d-flex flex-lg-row flex-column justify-content-center justify-content-lg-between">
-        <p class="mb-0">© 2024 Cybron International. All Rights Reserved</p>
-        <div class="d-flex justify-content-center mt-2">
-          <a href="#" class="text-dark mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-dark mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-dark mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-dark mx-2"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
+
     </div>
+    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center">© 2024 Cybron International. All Rights
+      Reserved</p>
   </footer>
-  
-</footer>
  <!-- FOOTER -->
 
  <!-- Option 1: Bootstrap Bundle with Popper -->
