--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -644,7 +644,7 @@
         class="col-lg-6 col-md-6 col-12 position-relative d-flex flex-lg-row flex-column io mt-lg-0 mt-4">
         <img src="assets/Main_Page/appro_1.jpg"
           class="img-fluid col-lg-10 ms-auto col-12 io1 ps-lg-2" alt>
-        <img src="assets/appro_2.png"
+        <img src="assets/Main_Page/appro_2.png"
           class="img-fluid col-lg-6 ms-auto col-6  io2 ps-lg-2" alt>
 
       </div>
