--- a/7thgrade.html
+++ b/7thgrade.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT AWEOSEOM -->
-  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
   <!-- FONT AWEOSEOM -->
 
   <!-- EXTERNEL CSS FILE -->
