--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Images/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -99,7 +99,7 @@
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo/logo.png" alt class="col-lg-6 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-6 col-5" />
           <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button"
@@ -276,7 +276,7 @@
       aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">
-          <img src="assets/logo/logo.png" alt class="col-lg-5 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-5 col-5" />
           <!-- Replace with actual logo path -->
         </h5>
         <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
@@ -417,7 +417,7 @@
       class="back d-flex justify-content-center align-items-center"
       data-bs-ride="carousel">
       <img
-        src="assets/Banner/blog_banner.png"
+        src="assets/Images/Banner/blog_banner.png"
         alt="About Cybron Background"
         class="position-absolute w-100 h-100 aboutback" />
       <div
@@ -449,7 +449,7 @@
           <div class="row">
             <!-- Company Info -->
             <div class="col-lg-3 col-md-6 mb-4">
-              <img src="assets/logo/logo.png" alt="Cybron Logo"
+              <img src="assets/Images/logo/logo.png" alt="Cybron Logo"
                 class="mb-3 col-lg-10 m-0 p-0">
               <p class="locte text-white">404 Old Bedford Road, Luton, England
                 LU2 7BP<br>SIC codes — 62012 United Kingdom
