--- a/cybron.html
+++ b/cybron.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Images/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -101,7 +101,7 @@
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo/logo.png" alt class="col-lg-6 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-6 col-5" />
           <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button"
@@ -278,7 +278,7 @@
       aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">
-          <img src="assets/logo/logo.png" alt class="col-lg-5 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-5 col-5" />
           <!-- Replace with actual logo path -->
         </h5>
         <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
@@ -435,7 +435,7 @@
       <!-- Left Section -->
       <div
         class="col-md-5 col-12 position-relative  d-flex flex-column justify-content-end px-3">
-        <img src="assets/Banner/evulation_banner.png"
+        <img src="assets/Images/Banner/evulation_banner.png"
           class=" whycol-11 img-fluid h-100 position-absolute" alt>
 
       </div>
@@ -823,7 +823,7 @@
         <div class="col-lg-4 col-md-6  col-12 ">
           <div
             class="mb-3 col-12 px-3 d-lg-flex  d-none flex-row justify-content-center align-items-center  py-5 color-2 border border-2 shadow-lg rounded-3 frameworkpic">
-            <img src="assets/Scout_Card/framework.jpg" alt class="frameworkpic">
+            <img src="assets/Images/Scout_Card/framework.jpg" alt class="frameworkpic">
             <i class="fa-solid fa-eye diveye text-white">
 
             </i>
@@ -1031,7 +1031,7 @@
           <div class="row">
             <!-- Company Info -->
             <div class="col-lg-3 col-md-6 mb-4">
-              <img src="assets/logo/logo.png" alt="Cybron Logo"
+              <img src="assets/Images/logo/logo.png" alt="Cybron Logo"
                 class="mb-3 col-lg-10 m-0 p-0">
               <p class="locte text-white">404 Old Bedford Road, Luton, England
                 LU2 7BP<br>SIC codes — 62012 United Kingdom
