--- a/Trainers.html
+++ b/Trainers.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Images/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -101,7 +101,7 @@
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo/logo.png" alt class="col-lg-6 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-6 col-5" />
           <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button"
@@ -278,7 +278,7 @@
       aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">
-          <img src="assets/logo/logo.png" alt class="col-lg-5 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-5 col-5" />
           <!-- Replace with actual logo path -->
         </h5>
         <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
@@ -462,7 +462,7 @@
     <div class="container-fluid flex-wrap d-flex">
       <div class="col-lg-4 col-md-6 col-12 mb-2  gap-2 ">
         <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-          <img src="assets/Team_Member/team-member.jpg"
+          <img src="assets/Images/Team_Member/team-member.jpg"
             class=" img-fluid col-12" alt>
           <div class="text-center pt-2 bg-col text-white py-3">
             <h6
@@ -490,7 +490,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-12 mb-2  ">
         <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-          <img src="assets/Team_Member/team-member2.jpg"
+          <img src="assets/Images/Team_Member/team-member2.jpg"
             class=" img-fluid col-12" alt>
           <div class="text-center pt-2 bg-col text-white py-3">
             <h6
@@ -518,7 +518,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-12 mb-2  ">
         <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-          <img src="assets/Team_Member/team-member3.jpg"
+          <img src="assets/Images/Team_Member/team-member3.jpg"
             class=" img-fluid col-12" alt>
           <div class="text-center pt-2 bg-col text-white py-3">
             <h6
@@ -546,7 +546,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-12 mb-2  ">
         <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-          <img src="assets/Team_Member/team-member4.jpg"
+          <img src="assets/Images/Team_Member/team-member4.jpg"
             class=" img-fluid col-12" alt>
           <div class="text-center pt-2 bg-col text-white py-3">
             <h6
@@ -574,7 +574,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-12 mb-2  ">
         <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-          <img src="assets/Team_Member/team-member5.jpg"
+          <img src="assets/Images/Team_Member/team-member5.jpg"
             class=" img-fluid col-12" alt>
           <div class="text-center pt-2 bg-col text-white py-3">
             <h6
@@ -602,7 +602,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-12 mb-2  ">
         <div class="col-lg-11 col-12 shadow-lg position-relative colddd">
-          <img src="assets/Team_Member/team-member6.jpg"
+          <img src="assets/Images/Team_Member/team-member6.jpg"
             class=" img-fluid col-12" alt>
           <div class="text-center pt-2 bg-col text-white py-3">
             <h6
@@ -635,7 +635,7 @@
         <div class="row">
           <!-- Company Info -->
           <div class="col-lg-3 col-md-6 mb-4">
-            <img src="assets/logo/logo.png" alt="Cybron Logo"
+            <img src="assets/Images/logo/logo.png" alt="Cybron Logo"
               class="mb-3 col-lg-10 m-0 p-0">
             <p class="locte text-white">404 Old Bedford Road, Luton, England LU2
               7BP<br>SIC codes — 62012 United Kingdom
