--- a/evolution.html
+++ b/evolution.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Images/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -103,7 +103,7 @@
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo/logo.png" alt class="col-lg-6 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-6 col-5" />
           <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button"
@@ -280,7 +280,7 @@
       aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">
-          <img src="assets/logo/logo.png" alt class="col-lg-5 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-5 col-5" />
           <!-- Replace with actual logo path -->
         </h5>
         <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
@@ -423,7 +423,7 @@
       class="aboutback d-flex justify-content-center align-items-center"
       data-bs-ride="carousel">
       <img
-        src="assets/Banner/evulation_banner.png"
+        src="assets/Images/Banner/evulation_banner.png"
         alt="About Cybron Background"
         class="position-absolute w-100 h-100 aboutback" />
       <div
@@ -442,9 +442,9 @@
       <!-- Left Section -->
       <div
         class="col-md-6 col-lg-6 evcol text-center text-md-start d-flex flex-lg-row">
-        <img src="assets/Main_Page/about2-img-1.jpg"
+        <img src="assets/Images/Main_Page/about2-img-1.jpg"
           class="img-fluid ev-col-1 ev-c-1" alt>
-        <img src="assets/Main_Page/about2-img-2.jpg"
+        <img src="assets/Images/Main_Page/about2-img-2.jpg"
           class="img-fluid ev-col-1 ev-c-2" alt>
 
       </div>
@@ -510,7 +510,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-12">
-            <img src="assets/Curriculum_Image/cir_1.jpg"
+            <img src="assets/Images/Curriculum_Image/cir_1.jpg"
               class="img-fluid col-12" alt="1997">
           </div>
         </div>
@@ -532,7 +532,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-12 order-lg-1 pe-lg-5">
-            <img src="assets/Curriculum_Image/cir_2.jpg"
+            <img src="assets/Images/Curriculum_Image/cir_2.jpg"
               class="img-fluid col-12" alt="1997">
           </div>
         </div>
@@ -556,7 +556,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-12">
-            <img src="assets/Curriculum_Image/cir_4.jpg"
+            <img src="assets/Images/Curriculum_Image/cir_4.jpg"
               class="img-fluid col-12" alt="1997">
           </div>
         </div>
@@ -570,7 +570,7 @@
         <div class="row">
           <!-- Company Info -->
           <div class="col-lg-3 col-md-6 mb-4">
-            <img src="assets/logo/logo.png" alt="Cybron Logo"
+            <img src="assets/Images/logo/logo.png" alt="Cybron Logo"
               class="mb-3 col-lg-10 m-0 p-0">
             <p class="locte text-white">404 Old Bedford Road, Luton, England LU2
               7BP<br>SIC codes — 62012 United Kingdom
