--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Images/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -100,7 +100,7 @@
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo/logo.png" alt class="col-lg-6 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-6 col-5" />
           <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button"
@@ -277,7 +277,7 @@
       aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">
-          <img src="assets/logo/logo.png" alt class="col-lg-5 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-5 col-5" />
           <!-- Replace with actual logo path -->
         </h5>
         <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
@@ -424,7 +424,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active d-flex flex-column position-relative">
           <div class="d-flex   align-items-center div-h po">
-            <img src="assets/Banner/home_banner1.png"
+            <img src="assets/Images/Banner/home_banner1.png"
               class="d-block w-100 slider-img1" alt>
             <div
               class="position-absolute col-lg-12 px-4 col-12  text-white d-flex mt-5 pt-5 flex-column justify-content-start ">
@@ -458,7 +458,7 @@
 
         <div class="carousel-item d-flex flex-column  position-relative">
           <div class="d-flex  align-items-center div-h">
-            <img src="assets/Banner/home_banner2.png"
+            <img src="assets/Images/Banner/home_banner2.png"
               class="d-block w-100 slider-img2" alt>
 
             <div
@@ -642,9 +642,9 @@
       </div>
       <div
         class="col-lg-6 col-md-6 col-12 position-relative d-flex flex-lg-row flex-column io mt-lg-0 mt-4">
-        <img src="assets/Main_Page/appro_1.jpg"
+        <img src="assets/Images/Main_Page/appro_1.jpg"
           class="img-fluid col-lg-10 ms-auto col-12 io1 ps-lg-2" alt>
-        <img src="assets/Main_Page/appro_2.png"
+        <img src="assets/Images/Main_Page/appro_2.png"
           class="img-fluid col-lg-6 ms-auto col-6  io2 ps-lg-2" alt>
 
       </div>
@@ -715,7 +715,7 @@
     <div class="container-fluid d-flex flex-wrap ">
       <div class="col-lg-4 col-12  course-img">
         <div class="hov position-relative">
-          <img src="assets/Curriculum_Image/cir_1.jpg"
+          <img src="assets/Images/Curriculum_Image/cir_1.jpg"
             class="img-fluid w-100 course-img1 position-absolute h-100" />
           <div class="cardtt col-12 position-absolute top-0 start-0 h-100">
             <h5 class="text-white fw-bold fs-3 pb-4 col-10 mx-auto pt-5">Cybron
@@ -742,7 +742,7 @@
 
       <div class="col-lg-4 col-12 course-img">
         <div class="hov position-relative">
-          <img src="assets/Curriculum_Image/cir_2.jpg"
+          <img src="assets/Images/Curriculum_Image/cir_2.jpg"
             class="img-fluid w-100 course-img1 position-absolute h-100" />
           <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
             <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron
@@ -770,7 +770,7 @@
       </div>
       <div class="col-lg-4 col-12  course-img">
         <div class="hov position-relative">
-          <img src="assets/Curriculum_Image/cir_4.jpg"
+          <img src="assets/Images/Curriculum_Image/cir_4.jpg"
             class="img-fluid w-100 course-img1 position-absolute h-100" />
           <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
             <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron
@@ -798,7 +798,7 @@
       </div>
       <div class="col-lg-4 col-12 course-img">
         <div class="hov position-relative">
-          <img src="assets/Curriculum_Image/cir_5.jpg"
+          <img src="assets/Images/Curriculum_Image/cir_5.jpg"
             class="img-fluid w-100 course-img1 position-absolute h-100" />
           <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
             <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron
@@ -826,7 +826,7 @@
       </div>
       <div class="col-lg-4 col-12 course-img">
         <div class="hov position-relative">
-          <img src="assets/Curriculum_Image/cir_6.jpg"
+          <img src="assets/Images/Curriculum_Image/cir_6.jpg"
             class="img-fluid w-100 course-img1 position-absolute h-100" />
           <div class=" cardtt col-12  position-absolute top-0 start-0 h-100">
             <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron
@@ -854,7 +854,7 @@
       </div>
       <div class="col-lg-4 col-12  course-img">
         <div class="hov position-relative">
-          <img src="assets/Curriculum_Image/cir_7.jpg"
+          <img src="assets/Images/Curriculum_Image/cir_7.jpg"
             class="img-fluid w-100 course-img1 position-absolute h-100" />
           <div class=" cardtt col-12 position-absolute top-0 start-0 h-100 ">
             <h5 class="text-white fw-bold fs-3 pb-4  col-10 mx-auto pt-5">Cybron
@@ -961,9 +961,9 @@
       class="container-fluid my-5 d-flex flex-lg-row flex-column justify-content-center align-items-center testimoina">
       <div
         class="col-lg-6 col-12 test-bg  py-5  flex-lg-row flex-column justify-content-between">
-        <img src="assets/Main_Page/test_1.jpg"
+        <img src="assets/Images/Main_Page/test_1.jpg"
           class=" testi1 col-lg-4 col-10 mx-auto mt-lg-0 mt-5 " alt>
-        <img src="assets/Main_Page/test_3.jpg" class=" testi2 col-lg-5 col-10"
+        <img src="assets/Images/Main_Page/test_3.jpg" class=" testi2 col-lg-5 col-10"
           alt>
 
       </div>
@@ -1147,7 +1147,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-12"><img src="assets/Main_Page/faqs-image.webp"
+      <div class="col-lg-6 col-12"><img src="assets/Images/Main_Page/faqs-image.webp"
           class="img-fluid col-12" alt srcset></div>
     </div>
     <!-- FAQS END -->
@@ -1155,7 +1155,7 @@
     <!-- CONTACT-US  START-->
     <div
       class="container-fluid d-flex flex-lg-row flex-column justify-content-between position-relative  mx-0  py-5 contact-page">
-      <img src="assets/Main_Page/contact.png" class="img-fluid contact-bg-img "
+      <img src="assets/Images/Main_Page/contact.png" class="img-fluid contact-bg-img "
         alt>
       <div class="col-lg-6 d-flex flex-row align-items-center col-12  rounded ">
         <!-- <iframe width="100%" height="100%" class="position-absolute top-0 start-0" frameborder="0" title="map" marginheight="0" marginwidth="0" scrolling="no" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%C4%B0zmir+(My%20Business%20Name)&ie=UTF8&t=&z=14&iwloc=B&output=embed" style="filter:  opacity(0.5);"></iframe> -->
@@ -1272,7 +1272,7 @@
         <div class="row">
           <!-- Company Info -->
           <div class="col-lg-3 col-md-6 mb-4">
-            <img src="assets/logo/logo.png" alt="Cybron Logo"
+            <img src="assets/Images/logo/logo.png" alt="Cybron Logo"
               class="mb-3 col-lg-10 m-0 p-0">
             <p class="locte text-white">404 Old Bedford Road, Luton, England LU2
               7BP<br>SIC codes — 62012 United Kingdom
