--- a/why.html
+++ b/why.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- FONT AWEOSEOM -->
-    <link rel="shortcut icon" href="assets/logo/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/Images/logo/logo.png" type="image/x-icon">
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
@@ -102,7 +102,7 @@
       id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo/logo.png" alt class="col-lg-6 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-6 col-5" />
           <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button"
@@ -279,7 +279,7 @@
       aria-labelledby="offcanvasRightLabel">
       <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel">
-          <img src="assets/logo/logo.png" alt class="col-lg-5 col-5" />
+          <img src="assets/Images/logo/logo.png" alt class="col-lg-5 col-5" />
           <!-- Replace with actual logo path -->
         </h5>
         <!-- <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button> -->
@@ -422,7 +422,7 @@
       class="aboutback d-flex justify-content-center align-items-center"
       data-bs-ride="carousel">
       <img
-        src="assets/Banner/why_banner.png"
+        src="assets/Images/Banner/why_banner.png"
         alt="About Cybron Background"
         class="position-absolute w-100 h-100 aboutback" />
       <div
@@ -439,7 +439,7 @@
 
       <!-- Left Section -->
       <div class="col-md-5 col-12  text-center text-md-start">
-        <img src="assets/Banner/evulation_banner.png"
+        <img src="assets/Images/Banner/evulation_banner.png"
           class="whycol-1 img-fluid col-12 " alt>
       </div>
 
@@ -527,7 +527,7 @@
       <div class="col-lg-4 grttt">
         <div class="col-lg-11 col-md-12 us  position-relative overflow-hidden">
           <img
-            src="assets/Curriculum_Image/cir_7.jpg"
+            src="assets/Images/Curriculum_Image/cir_7.jpg"
             alt="Cybron Framework"
             class="position-absolute w-100 h-100 u" />
 
@@ -553,7 +553,7 @@
       <div class="col-lg-4 grttt mt-lg-0 mt-3">
         <div class="col-lg-11 col-md-12 us position-relative overflow-hidden">
           <img
-            src="assets/Curriculum_Image/cir_4.jpg"
+            src="assets/Images/Curriculum_Image/cir_4.jpg"
             alt="Cybron Framework"
             class="position-absolute w-100 h-100 u" />
           <div class="ushover ">
@@ -578,7 +578,7 @@
         <div
           class="col-lg-11 col-md-12 us us1  position-relative overflow-hidden">
           <img
-            src="assets/Curriculum_Image/cir_5.jpg"
+            src="assets/Images/Curriculum_Image/cir_5.jpg"
             alt="Cybron Framework"
             class="position-absolute w-100 h-100 u" />
           <div class="ushover ">
@@ -609,7 +609,7 @@
           <div class="row">
             <!-- Company Info -->
             <div class="col-lg-3 col-md-6 mb-4">
-              <img src="assets/logo/logo.png" alt="Cybron Logo"
+              <img src="assets/Images/logo/logo.png" alt="Cybron Logo"
                 class="mb-3 col-lg-10 m-0 p-0">
               <p class="locte text-white">404 Old Bedford Road, Luton, England
                 LU2 7BP<br>SIC codes — 62012 United Kingdom
