--- a/index.html
+++ b/index.html
@@ -505,66 +505,71 @@
     </div>
     <!-- SLIDER -->
     <!-- MAIN 1 START-->
-    <div
-      class="container-fluid d-flex bg-light main1 mb-3 py-5 flex-lg-row  flex-column justify-content-center gap-1 align-items-center">
+    <div class="container-fluid d-flex bg-light main1 mb-3 py-5 flex-lg-row  flex-column justify-content-center gap-1 align-items-center">
       <div class="col-lg-4 car ">
 
-        <div class="col-11 mx-auto  bg-white shadow-lg dfd ">
+<a href="cybron-scout-grade-6-certification.html" class="text-decoration-none ">
+  <div class="col-11 mx-auto  bg-white shadow-lg dfd ">
 
-          <i class="fa-solid fa-gear  cardi "></i>
+    <i class="fa-solid fa-gear  cardi "></i>
 
-          <div class="card-body">
-            <h5 class="card-title fw-bold ">Cybron Scout</h5>
-            <p class="card-text pb-4"> learn cyber security from scratch from
-              class 6th sandard grade and get the special
-              title of cybron scout.</p>
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          </div>
-          <div class="carhover col-11">
+    <div class="card-body">
+      <h5 class="card-title fw-bold text-dark">Cybron Scout</h5>
+      <p class="card-text pb-4"> learn cyber security from scratch from
+        class 6th sandard grade and get the special
+        title of cybron scout.</p>
+      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+    </div>
+    <div class="carhover col-11">
 
-          </div>
+    </div>
 
-        </div>
+  </div>
+</a>
 
       </div>
 
       <div class="col-lg-4 car">
-        <div class="col-11 mx-auto bg-white shadow-lg dfd">
+     <a href="cybron-fundamentals.html" class="text-decoration-none ">
+      <div class="col-11 mx-auto bg-white shadow-lg dfd">
 
-          <i class="fa-solid fa-passport me-2  cardi"></i>
+        <i class="fa-solid fa-passport me-2  cardi"></i>
 
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Cybron assocaiate</h5>
-            <p class="card-text"> Undergraduate students can establish their
-              career with the team of professionals and
-              establish their career in cyber security domain with international
-              community as <span
-                class="fw-normal">Cybron Assocaiate</span></p>
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          </div>
-          <div class="carhover col-11">
-
-          </div>
+        <div class="card-body">
+          <h5 class="card-title fw-bold text-dark">Cybron assocaiate</h5>
+          <p class="card-text"> Undergraduate students can establish their
+            career with the team of professionals and
+            establish their career in cyber security domain with international
+            community as <span
+              class="fw-normal">Cybron Assocaiate</span></p>
+          <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
+        <div class="carhover col-11">
+
+        </div>
+      </div>
+     </a>
       </div>
 
       <div class=" col-lg-4 car">
-        <div class="col-11 mx-auto bg-white shadow-lg dfd">
+   <a href="cybron-offensive-security-professional.html" class="text-decoration-none">
+    <div class="col-11 mx-auto bg-white shadow-lg dfd">
 
-          <i class="fa-solid fa-unlock me-2  cardi"></i>
+      <i class="fa-solid fa-unlock me-2  cardi"></i>
 
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Cybron professionals</h5>
-            <p class="card-text pb-4"> learn cyber security from scratch from
-              class 6th sandard grade and get5 the special
-              title of cybron scout.</p>
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-          </div>
-          <div class="carhover col-11">
+      <div class="card-body">
+        <h5 class="card-title fw-bold text-dark">Cybron professionals</h5>
+        <p class="card-text pb-4"> learn cyber security from scratch from
+          class 6th sandard grade and get5 the special
+          title of cybron scout.</p>
+        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+      </div>
+      <div class="carhover col-11">
 
-          </div>
-        </div>
+      </div>
+    </div>
 
+   </a>
       </div>
     </div>
 
